--- a/CycleAlarmApp/CycleAlarmApp/Page/SettingPage.xaml
+++ b/CycleAlarmApp/CycleAlarmApp/Page/SettingPage.xaml
@@ -6,23 +6,24 @@
              mc:Ignorable="d"
              x:Class="CycleAlarmApp.SettingPage">
     <ContentPage.Content>
-        <Grid x:Name="BackgroundTheme" BackgroundColor="SkyBlue" Margin="0">
+        <Grid Padding="30" x:Name="BackgroundTheme" BackgroundColor="SkyBlue" Margin="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="50" />
-                <RowDefinition Height="100" />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="60" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="2*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="300" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            <Label x:Name="TitleLabel" Grid.Row="1" HorizontalTextAlignment="Center" Grid.ColumnSpan="3" HorizontalOptions="Center" VerticalOptions="Center" FontSize="36" FontAttributes="None" TextColor="White">Enjoy Ride,
-Safety your Ride</Label>
-
-            <Frame Grid.ColumnSpan="3" BackgroundColor="White" Grid.Row="2" Margin="40" CornerRadius="50">
-                <Grid x:Name="settingMenu" Padding="20" Grid.Row="1" Margin="0">
+            <Label Grid.Row="1" HorizontalOptions="Start" VerticalOptions="Center" FontSize="40" FontAttributes="Bold" TextColor="White">R.S.R</Label>
+            <Label Grid.Row="2" HorizontalOptions="Start" VerticalOptions="Center" FontSize="26" FontAttributes="None" TextColor="White">Road Safety for Riders</Label>
+            <Frame Grid.Column="0" BackgroundColor="White" Grid.Row="3" Margin="10" CornerRadius="50">
+                <Grid x:Name="settingMenu" Grid.Row="1" Margin="0">
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
                         <RowDefinition Height="1*" />
                         <RowDefinition Height="1*" />
                         <RowDefinition Height="1*" />
@@ -33,12 +34,15 @@ Safety your Ride</Label>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
-                    <Label HorizontalTextAlignment="Center" FontSize="Large" Grid.Column="0" Grid.Row="0" Text="임계값 설정"></Label>
+                    <Label HorizontalTextAlignment="Center" FontSize="Large" Grid.Column="0" Grid.Row="0" Text="방향등 임계값 설정"></Label>
                     <Slider x:Name="ThresholdVal" Grid.Column="0" Grid.Row="1" Minimum="0" Value="0.1" Maximum="0.6" ValueChanged="ThresholdChanged"></Slider>
                     <Label x:Name="ThresholdLabel" HorizontalTextAlignment="Center" Grid.Column="0" Grid.Row="2" Text="0.1"></Label>
-                    <Label HorizontalTextAlignment="Center" FontSize="Large" Grid.Column="0" Grid.Row="3" Text="중앙 설정"></Label>
+                    <Label HorizontalTextAlignment="Center" FontSize="Large" Grid.Column="0" Grid.Row="3" Text="방향등 중앙 설정"></Label>
                     <Slider x:Name="CenterVal" Grid.Column="0" Grid.Row="4" Minimum="-0.3" Value="0" Maximum="0.3" ValueChanged="CenterChanged"></Slider>
                     <Label x:Name="CenterLabel" HorizontalTextAlignment="Center" Grid.Column="0" Grid.Row="5" Text="0"></Label>
+                    <Label HorizontalTextAlignment="Center" FontSize="Large" Grid.Column="0" Grid.Row="6" Text="정지등 설정"></Label>
+                    <Slider x:Name="BreakVal" Grid.Column="0" Grid.Row="7" Minimum="0" Value="1" Maximum="2" ValueChanged="BreakChanged"></Slider>
+                    <Label x:Name="BreakLabel" HorizontalTextAlignment="Center" Grid.Column="0" Grid.Row="8" Text="1"></Label>
                 </Grid>
             </Frame>
         </Grid>
