--- a/CycleAlarmApp/CycleAlarmApp/Page/SettingPage.xaml
+++ b/CycleAlarmApp/CycleAlarmApp/Page/SettingPage.xaml
@@ -41,8 +41,9 @@
                     <Slider x:Name="CenterVal" Grid.Column="0" Grid.Row="4" Minimum="-0.3" Value="0" Maximum="0.3" ValueChanged="CenterChanged"></Slider>
                     <Label x:Name="CenterLabel" HorizontalTextAlignment="Center" Grid.Column="0" Grid.Row="5" Text="0"></Label>
                     <Label HorizontalTextAlignment="Center" FontSize="Large" Grid.Column="0" Grid.Row="6" Text="정지등 설정"></Label>
-                    <Slider x:Name="BreakVal" Grid.Column="0" Grid.Row="7" Minimum="0" Value="1" Maximum="2" ValueChanged="BreakChanged"></Slider>
-                    <Label x:Name="BreakLabel" HorizontalTextAlignment="Center" Grid.Column="0" Grid.Row="8" Text="1"></Label>
+                    <Slider x:Name="BreakVal" Grid.Column="0" Grid.Row="7" Minimum="0" Value="2.5" Maximum="5" ValueChanged="BreakChanged"></Slider>
+                    <Label x:Name="BreakLabel" HorizontalTextAlignment="Center" Grid.Column="0" Grid.Row="8" Text="2.5"></Label>
+                    <Button Grid.Row="9" Margin="50, 0, 50, 0" Padding="0" CornerRadius="15" Clicked="ResetValues" Text="초기화"></Button>
                 </Grid>
             </Frame>
         </Grid>
